CLIApp enlève les "" dans les arguments reçus